# RTOP-PersistentHomologyForObjectSegmentation

./: Alpha comlex - model anchor.ipynb  Diagrams and Visualization.ipynb  README.md  README.txt  Rips complex - model anchor.ipynb  Rips complex - model eight.ipynb  Seminarski rad - Racunarska topologija.odp  compute_distance_matricies.py  compute_homology_diagrams.py  compute_matricies.sh  estimate_geodesic_distance_matrix_from_off_model_file
geodesic_distance_estimation/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  matrix.hpp
